
* You can now set an ANT_ARGS environment variable to hold arguments you
  always want passed to the 'ant' command -- for example, if you always
  want to use a different logger or the -find flag.
  
* <tstamp> now supports a new "prefix" attribute to prefix properties set.

* you can now specify the -sourcepath for <javac> explicitly.

* The compiler implementation for javac can now be chosen on a task by
  task basis.  Use the new compiler attribute of <javac> to override
  the build.compiler property.
  
* <propertyfile>'s <entry> now has a 'unit' attribute to specify the
  increment/decrement unit on date operations.
  
* <property> now supports a 'prefix' attribute when loading from a file
  or resource.

* In Ant 1.4 a feature has been added to the <junit> task that would
  add ant.jar, optional.jar and junit.jar implicitly to the classpath -
  this feature can now be disabled by setting the new includeantruntime
  attribute to false.

* <style> behaves different than any other directory based task as it
  processes all files that it finds in included directories in
  addition to the files matched by your patterns.  There now is a new
  attribute to suppress this behavior.

Changes from Ant 1.4 to Ant 1.4.1
===========================================

Fixed bugs:
-----------

* <ant>'s antfile attribute will now also be considered an absolute path on
  Windows systems, if it starts with a \ and no drive specifier.
 
* The fullpath attribute of <zipfileset> has been ignored if you used
  the src attribute at the same time.

* The manifest file is now always placed as the second entry (after /META-INF)
  in generated jars. This allows the manifest to be read by JarInputStreams
  
* Fixed bug in depend task which would fail with a NullPointerException if no
  dependency cache was specified.
  
* sql task now handles REM statements correctly so that lines starying with rem
  but which are not comments are actually processed.
  